fix gap

--- a/src/css/form/form.css
+++ b/src/css/form/form.css
@@ -2,5 +2,5 @@
   flex: 1 1 auto;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px;
 }
